--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Events</title>
+    <title>Video Streaming</title>
     <style>
-        /* Resetting default styles */
+        /* General Reset */
         * {
             margin: 0;
             padding: 0;
@@ -14,138 +14,177 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #121212;
-            color: #fff;
-            overflow-x: hidden;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+
+        /* Header */
+        header {
+            background-color: #212121;
+            padding: 15px 20px;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
             align-items: center;
+            justify-content: space-between;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1000;
         }
 
-        h1 {
-            font-size: 40px;
-            color: #ff4b2b;
-            font-weight: 700;
-            letter-spacing: 2px;
+        header .logo {
+            color: #fff;
+            font-size: 28px;
+            font-weight: bold;
             text-transform: uppercase;
-            text-align: center;
-            margin-top: 20px;
-            margin-bottom: 40px;
         }
 
-        .event-container {
+        header .search-bar {
+            display: flex;
+            align-items: center;
+            max-width: 500px;
+            width: 100%;
+            background-color: #fff;
+            border-radius: 20px;
+            overflow: hidden;
+        }
+
+        header .search-bar input {
+            border: none;
+            padding: 10px;
+            flex-grow: 1;
+            font-size: 16px;
+        }
+
+        header .search-bar button {
+            background-color: #ff0000;
+            border: none;
+            padding: 10px 15px;
+            cursor: pointer;
+            font-size: 16px;
+            color: white;
+            border-radius: 0 20px 20px 0;
+        }
+
+        /* Sidebar */
+        .sidebar {
+            position: fixed;
+            top: 60px;
+            left: 0;
+            height: 100%;
+            width: 250px;
+            background-color: #212121;
+            color: white;
+            padding-top: 20px;
+            box-shadow: 2px 0 10px rgba(0, 0, 0, 0.2);
+            z-index: 999;
+        }
+
+        .sidebar a {
+            display: block;
+            padding: 15px;
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            transition: background-color 0.3s;
+        }
+
+        .sidebar a:hover {
+            background-color: #333;
+        }
+
+        /* Main Content Area */
+        .main-content {
+            margin-left: 270px;
+            padding-top: 80px;
+            padding-bottom: 20px;
+        }
+
+        .video-container {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 30px;
+            gap: 20px;
             padding: 20px;
-            justify-content: center;
-            width: 90%;
-            max-width: 1200px;
+            justify-items: center;
         }
 
-        .event-card {
-            background: #1f1f1f;
-            border-radius: 15px;
+        .video-card {
+            background-color: #fff;
+            border-radius: 10px;
             overflow: hidden;
-            position: relative;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-            transition: all 0.3s ease-in-out;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out;
             cursor: pointer;
         }
 
-        .event-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.7);
+        .video-card:hover {
+            transform: scale(1.05);
         }
 
-        .event-card img {
+        .video-card img {
             width: 100%;
-            height: 200px;
+            height: 180px;
             object-fit: cover;
             transition: transform 0.3s ease-in-out;
         }
 
-        .event-card img:hover {
+        .video-card img:hover {
             transform: scale(1.1);
         }
 
-        .event-card-content {
-            padding: 20px;
+        .video-card-content {
+            padding: 15px;
         }
 
-        .event-title {
-            font-size: 22px;
-            color: #fff;
-            font-weight: bold;
-            margin-bottom: 15px;
-        }
-
-        .event-league {
+        .video-title {
             font-size: 16px;
-            color: #bbb;
-            margin-bottom: 20px;
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 10px;
         }
 
-        .live-badge {
-            position: absolute;
-            top: 15px;
-            right: 15px;
-            background-color: #e74c3c;
-            color: white;
-            padding: 5px 10px;
-            border-radius: 25px;
-            font-weight: 600;
+        .video-meta {
             font-size: 14px;
-            animation: pulse 1.5s infinite ease-in-out;
+            color: #777;
         }
 
-        @keyframes pulse {
-            0% {
-                transform: scale(1);
-                opacity: 1;
-            }
-            50% {
-                transform: scale(1.1);
-                opacity: 0.7;
-            }
-            100% {
-                transform: scale(1);
-                opacity: 1;
-            }
-        }
-
-        .btn-group {
-            display: flex;
-            justify-content: space-between;
-            gap: 10px;
-            margin-top: 10px;
-        }
-
-        .watch-btn, .ad-free-btn {
-            background: linear-gradient(90deg, #ff4b2b, #ff8c00);
-            padding: 12px 20px;
-            border-radius: 30px;
-            color: #fff;
-            font-weight: 600;
-            text-decoration: none;
+        /* Footer */
+        footer {
+            background-color: #212121;
+            color: white;
             text-align: center;
-            transition: all 0.3s ease;
-            flex-grow: 1;
+            padding: 20px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
         }
 
-        .watch-btn:hover, .ad-free-btn:hover {
-            transform: translateY(-5px);
-            background: linear-gradient(90deg, #ff8c00, #ff4b2b);
-        }
-
-        .watch-btn {
-            margin-right: 10px;
-        }
-
+        /* Media Queries */
         @media (max-width: 768px) {
-            h1 {
-                font-size: 30px;
+            .main-content {
+                margin-left: 0;
+                padding-top: 100px;
+            }
+
+            .sidebar {
+                position: relative;
+                height: auto;
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                flex-wrap: wrap;
+            }
+
+            .sidebar a {
+                display: inline-block;
+                padding: 10px;
+                width: 50%;
+                text-align: center;
+            }
+
+            .search-bar {
+                width: 100%;
             }
         }
 
@@ -153,50 +192,76 @@
 </head>
 <body>
 
-    <h1>Live Sports Events</h1>
-    <div class="event-container" id="events"></div>
+    <header>
+        <div class="logo">StreamTube</div>
+        <div class="search-bar">
+            <input type="text" placeholder="Search...">
+            <button>Search</button>
+        </div>
+    </header>
+
+    <div class="sidebar">
+        <a href="#">Home</a>
+        <a href="#">Trending</a>
+        <a href="#">Subscriptions</a>
+        <a href="#">Library</a>
+        <a href="#">History</a>
+    </div>
+
+    <div class="main-content">
+        <div class="video-container" id="video-container">
+            <!-- Video cards will be populated here by JS -->
+        </div>
+    </div>
+
+    <footer>
+        <p>StreamTube © 2025 | All Rights Reserved</p>
+    </footer>
 
     <script>
-        async function fetchEvents() {
-            try {
-                const response = await fetch("https://raw.githubusercontent.com/drmlive/fancode-live-events/refs/heads/main/fancode.json");
-                const data = await response.json();
-
-                const container = document.getElementById("events");
-                container.innerHTML = "";
-
-                data.matches.forEach(event => {
-                    const eventDiv = document.createElement("div");
-                    eventDiv.classList.add("event-card");
-
-                    let eventDate = new Date(event.startTime);
-                    let formattedDate = eventDate.toLocaleDateString();
-                    let formattedTime = eventDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-                    let isLive = event.status === "LIVE";
-                    let videoLink = event.dai_url ? `https://teamrohitofficalnew.netlify.app?videoUrl=${encodeURIComponent(event.dai_url)}` : "#";
-
-                    eventDiv.innerHTML = `
-                        <img src="${event.src}" alt="${event.title}">
-                        ${isLive ? `<div class="live-badge">LIVE</div>` : ""}
-                        <div class="event-card-content">
-                            <div class="event-title">${event.title}</div>
-                            <div class="event-league">${event.event_name}</div>
-                            <div class="btn-group">
-                                ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="watch-btn">Watch Now</a>` : ''}
-                                ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="ad-free-btn">Ad-Free</a>` : ''}
-                            </div>
-                        </div>
-                    `;
-
-                    container.appendChild(eventDiv);
-                });
-
-            } catch (error) {
-                console.error("Error fetching events:", error);
+        // Simulating video data
+        const videoData = [
+            {
+                title: 'How to Build a Web App from Scratch',
+                views: '5M views',
+                time: '2 weeks ago',
+                thumbnail: 'https://via.placeholder.com/300x180/FF0000/FFFFFF?text=Video+1'
+            },
+            {
+                title: 'Top 10 JavaScript Frameworks in 2025',
+                views: '2M views',
+                time: '1 month ago',
+                thumbnail: 'https://via.placeholder.com/300x180/00FF00/FFFFFF?text=Video+2'
+            },
+            {
+                title: 'Understanding CSS Grid and Flexbox',
+                views: '1.5M views',
+                time: '3 weeks ago',
+                thumbnail: 'https://via.placeholder.com/300x180/0000FF/FFFFFF?text=Video+3'
+            },
+            {
+                title: 'Introduction to Node.js for Beginners',
+                views: '3.2M views',
+                time: '1 month ago',
+                thumbnail: 'https://via.placeholder.com/300x180/FFFF00/FFFFFF?text=Video+4'
             }
-        }
+        ];
 
-        fetchEvents();
+        // Populate video cards dynamically
+        const container = document.getElementById('video-container');
+
+        videoData.forEach(video => {
+            const videoCard = document.createElement('div');
+            videoCard.classList.add('video-card');
+            videoCard.innerHTML = `
+                <img src="${video.thumbnail}" alt="${video.title}">
+                <div class="video-card-content">
+                    <div class="video-title">${video.title}</div>
+                    <div class="video-meta">${video.views} - ${video.time}</div>
+                </div>
+            `;
+            container.appendChild(videoCard);
+        });
     </script>
 
 </body>
