--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Streaming</title>
+    <title>Rohit Sharma Official</title>
     <style>
         /* General Reset */
         * {
@@ -14,255 +15,192 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
+            background-color: #0a3d62;
+            color: #fff;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
         }
 
         /* Header */
         header {
-            background-color: #212121;
-            padding: 15px 20px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            left: 0;
-            z-index: 1000;
-        }
-
-        header .logo {
+            background-color: #1d2d50;
+            padding: 30px 0;
+            text-align: center;
             color: #fff;
-            font-size: 28px;
-            font-weight: bold;
+        }
+
+        header h1 {
+            font-size: 3.5rem;
             text-transform: uppercase;
+            letter-spacing: 5px;
         }
 
-        header .search-bar {
+        header p {
+            font-size: 1.2rem;
+            font-weight: 300;
+            margin-top: 10px;
+        }
+
+        /* Navigation */
+        nav {
             display: flex;
-            align-items: center;
-            max-width: 500px;
-            width: 100%;
-            background-color: #fff;
-            border-radius: 20px;
-            overflow: hidden;
+            justify-content: center;
+            background-color: #1d2d50;
+            padding: 15px 0;
         }
 
-        header .search-bar input {
-            border: none;
-            padding: 10px;
-            flex-grow: 1;
-            font-size: 16px;
-        }
-
-        header .search-bar button {
-            background-color: #ff0000;
-            border: none;
-            padding: 10px 15px;
-            cursor: pointer;
-            font-size: 16px;
-            color: white;
-            border-radius: 0 20px 20px 0;
-        }
-
-        /* Sidebar */
-        .sidebar {
-            position: fixed;
-            top: 60px;
-            left: 0;
-            height: 100%;
-            width: 250px;
-            background-color: #212121;
-            color: white;
-            padding-top: 20px;
-            box-shadow: 2px 0 10px rgba(0, 0, 0, 0.2);
-            z-index: 999;
-        }
-
-        .sidebar a {
-            display: block;
-            padding: 15px;
-            color: white;
+        nav a {
+            color: #ff5c39;
             text-decoration: none;
-            font-size: 18px;
-            transition: background-color 0.3s;
+            font-size: 1.1rem;
+            padding: 10px 20px;
+            margin: 0 15px;
+            font-weight: 500;
         }
 
-        .sidebar a:hover {
-            background-color: #333;
+        nav a:hover {
+            background-color: #ff5c39;
+            color: #fff;
+            border-radius: 5px;
         }
 
-        /* Main Content Area */
-        .main-content {
-            margin-left: 270px;
-            padding-top: 80px;
-            padding-bottom: 20px;
+        /* Main Section */
+        .hero {
+            background-image: url('https://example.com/rohit-sharma-hero.jpg'); /* Add a hero image URL */
+            background-size: cover;
+            background-position: center;
+            height: 60vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            color: #fff;
         }
 
-        .video-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 20px;
-            justify-items: center;
-        }
-
-        .video-card {
-            background-color: #fff;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease-in-out;
-            cursor: pointer;
-        }
-
-        .video-card:hover {
-            transform: scale(1.05);
-        }
-
-        .video-card img {
-            width: 100%;
-            height: 180px;
-            object-fit: cover;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .video-card img:hover {
-            transform: scale(1.1);
-        }
-
-        .video-card-content {
-            padding: 15px;
-        }
-
-        .video-title {
-            font-size: 16px;
+        .hero h2 {
+            font-size: 3rem;
+            text-transform: uppercase;
             font-weight: bold;
-            color: #333;
-            margin-bottom: 10px;
         }
 
-        .video-meta {
-            font-size: 14px;
-            color: #777;
+        .hero p {
+            font-size: 1.5rem;
+            margin-top: 20px;
+        }
+
+        /* Content Section */
+        .content {
+            padding: 50px 20px;
+            background-color: #fff;
+            color: #333;
+            text-align: center;
+        }
+
+        .content h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            color: #ff5c39;
+        }
+
+        .content p {
+            font-size: 1.2rem;
+            line-height: 1.8;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        /* Stats Section */
+        .stats {
+            display: flex;
+            justify-content: space-around;
+            padding: 50px 20px;
+            background-color: #0a3d62;
+            color: #fff;
+        }
+
+        .stat-box {
+            text-align: center;
+            width: 200px;
+        }
+
+        .stat-box h3 {
+            font-size: 2.5rem;
+            font-weight: bold;
+        }
+
+        .stat-box p {
+            font-size: 1.1rem;
         }
 
         /* Footer */
         footer {
-            background-color: #212121;
-            color: white;
+            background-color: #1d2d50;
+            padding: 30px;
             text-align: center;
-            padding: 20px;
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
+            color: #fff;
         }
 
-        /* Media Queries */
-        @media (max-width: 768px) {
-            .main-content {
-                margin-left: 0;
-                padding-top: 100px;
-            }
-
-            .sidebar {
-                position: relative;
-                height: auto;
-                width: 100%;
-                display: flex;
-                justify-content: space-between;
-                flex-wrap: wrap;
-            }
-
-            .sidebar a {
-                display: inline-block;
-                padding: 10px;
-                width: 50%;
-                text-align: center;
-            }
-
-            .search-bar {
-                width: 100%;
-            }
+        footer p {
+            font-size: 1.2rem;
+            font-weight: 300;
         }
-
     </style>
 </head>
+
 <body>
 
+    <!-- Header Section -->
     <header>
-        <div class="logo">StreamTube</div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search...">
-            <button>Search</button>
-        </div>
+        <h1>Rohit Sharma</h1>
+        <p>The King of Cricket</p>
     </header>
 
-    <div class="sidebar">
+    <!-- Navigation Section -->
+    <nav>
         <a href="#">Home</a>
-        <a href="#">Trending</a>
-        <a href="#">Subscriptions</a>
-        <a href="#">Library</a>
-        <a href="#">History</a>
-    </div>
+        <a href="#">Biography</a>
+        <a href="#">Career Stats</a>
+        <a href="#">Videos</a>
+        <a href="#">Gallery</a>
+        <a href="#">Contact</a>
+    </nav>
 
-    <div class="main-content">
-        <div class="video-container" id="video-container">
-            <!-- Video cards will be populated here by JS -->
+    <!-- Hero Section -->
+    <section class="hero">
+        <div>
+            <h2>Welcome to the Official Website</h2>
+            <p>Follow the Journey of India's Captain</p>
         </div>
-    </div>
+    </section>
 
+    <!-- Content Section -->
+    <section class="content">
+        <h2>About Rohit Sharma</h2>
+        <p>Rohit Sharma is one of the most successful and popular cricketers in the world. As India's captain, he has led the team to many victories, including multiple ICC tournaments. Known for his elegant stroke play, Rohit has set records in both ODI and T20 formats. Get to know more about his incredible career and achievements on this platform.</p>
+    </section>
+
+    <!-- Stats Section -->
+    <section class="stats">
+        <div class="stat-box">
+            <h3>100+</h3>
+            <p>International Centuries</p>
+        </div>
+        <div class="stat-box">
+            <h3>250+</h3>
+            <p>ODI Matches</p>
+        </div>
+        <div class="stat-box">
+            <h3>5</h3>
+            <p>ICC Titles</p>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
     <footer>
-        <p>StreamTube © 2025 | All Rights Reserved</p>
+        <p>&copy; 2025 Rohit Sharma Official | All Rights Reserved</p>
     </footer>
 
-    <script>
-        // Simulating video data
-        const videoData = [
-            {
-                title: 'How to Build a Web App from Scratch',
-                views: '5M views',
-                time: '2 weeks ago',
-                thumbnail: 'https://via.placeholder.com/300x180/FF0000/FFFFFF?text=Video+1'
-            },
-            {
-                title: 'Top 10 JavaScript Frameworks in 2025',
-                views: '2M views',
-                time: '1 month ago',
-                thumbnail: 'https://via.placeholder.com/300x180/00FF00/FFFFFF?text=Video+2'
-            },
-            {
-                title: 'Understanding CSS Grid and Flexbox',
-                views: '1.5M views',
-                time: '3 weeks ago',
-                thumbnail: 'https://via.placeholder.com/300x180/0000FF/FFFFFF?text=Video+3'
-            },
-            {
-                title: 'Introduction to Node.js for Beginners',
-                views: '3.2M views',
-                time: '1 month ago',
-                thumbnail: 'https://via.placeholder.com/300x180/FFFF00/FFFFFF?text=Video+4'
-            }
-        ];
-
-        // Populate video cards dynamically
-        const container = document.getElementById('video-container');
-
-        videoData.forEach(video => {
-            const videoCard = document.createElement('div');
-            videoCard.classList.add('video-card');
-            videoCard.innerHTML = `
-                <img src="${video.thumbnail}" alt="${video.title}">
-                <div class="video-card-content">
-                    <div class="video-title">${video.title}</div>
-                    <div class="video-meta">${video.views} - ${video.time}</div>
-                </div>
-            `;
-            container.appendChild(videoCard);
-        });
-    </script>
-
 </body>
+
 </html>
