--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rohit Sharma Official</title>
+    <title>Live Events</title>
     <style>
-        /* General Reset */
+        /* Resetting default styles */
         * {
             margin: 0;
             padding: 0;
@@ -15,192 +14,189 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #0a3d62;
+            background-color: #121212;
             color: #fff;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
+            overflow-x: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
 
-        /* Header */
-        header {
-            background-color: #1d2d50;
-            padding: 30px 0;
-            text-align: center;
-            color: #fff;
-        }
-
-        header h1 {
-            font-size: 3.5rem;
+        h1 {
+            font-size: 40px;
+            color: #ff4b2b;
+            font-weight: 700;
+            letter-spacing: 2px;
             text-transform: uppercase;
-            letter-spacing: 5px;
+            text-align: center;
+            margin-top: 20px;
+            margin-bottom: 40px;
         }
 
-        header p {
-            font-size: 1.2rem;
-            font-weight: 300;
+        .event-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 30px;
+            padding: 20px;
+            justify-content: center;
+            width: 90%;
+            max-width: 1200px;
+        }
+
+        .event-card {
+            background: #1f1f1f;
+            border-radius: 15px;
+            overflow: hidden;
+            position: relative;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+            transition: all 0.3s ease-in-out;
+            cursor: pointer;
+        }
+
+        .event-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.7);
+        }
+
+        .event-card img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .event-card img:hover {
+            transform: scale(1.1);
+        }
+
+        .event-card-content {
+            padding: 20px;
+        }
+
+        .event-title {
+            font-size: 22px;
+            color: #fff;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
+
+        .event-league {
+            font-size: 16px;
+            color: #bbb;
+            margin-bottom: 20px;
+        }
+
+        .live-badge {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            background-color: #e74c3c;
+            color: white;
+            padding: 5px 10px;
+            border-radius: 25px;
+            font-weight: 600;
+            font-size: 14px;
+            animation: pulse 1.5s infinite ease-in-out;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+                opacity: 1;
+            }
+            50% {
+                transform: scale(1.1);
+                opacity: 0.7;
+            }
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        .btn-group {
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
             margin-top: 10px;
         }
 
-        /* Navigation */
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #1d2d50;
-            padding: 15px 0;
-        }
-
-        nav a {
-            color: #ff5c39;
+        .watch-btn, .ad-free-btn {
+            background: linear-gradient(90deg, #ff4b2b, #ff8c00);
+            padding: 12px 20px;
+            border-radius: 30px;
+            color: #fff;
+            font-weight: 600;
             text-decoration: none;
-            font-size: 1.1rem;
-            padding: 10px 20px;
-            margin: 0 15px;
-            font-weight: 500;
-        }
-
-        nav a:hover {
-            background-color: #ff5c39;
-            color: #fff;
-            border-radius: 5px;
-        }
-
-        /* Main Section */
-        .hero {
-            background-image: url('https://example.com/rohit-sharma-hero.jpg'); /* Add a hero image URL */
-            background-size: cover;
-            background-position: center;
-            height: 60vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             text-align: center;
-            color: #fff;
+            transition: all 0.3s ease;
+            flex-grow: 1;
         }
 
-        .hero h2 {
-            font-size: 3rem;
-            text-transform: uppercase;
-            font-weight: bold;
+        .watch-btn:hover, .ad-free-btn:hover {
+            transform: translateY(-5px);
+            background: linear-gradient(90deg, #ff8c00, #ff4b2b);
         }
 
-        .hero p {
-            font-size: 1.5rem;
-            margin-top: 20px;
+        .watch-btn {
+            margin-right: 10px;
         }
 
-        /* Content Section */
-        .content {
-            padding: 50px 20px;
-            background-color: #fff;
-            color: #333;
-            text-align: center;
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 30px;
+            }
         }
 
-        .content h2 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-            color: #ff5c39;
-        }
-
-        .content p {
-            font-size: 1.2rem;
-            line-height: 1.8;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        /* Stats Section */
-        .stats {
-            display: flex;
-            justify-content: space-around;
-            padding: 50px 20px;
-            background-color: #0a3d62;
-            color: #fff;
-        }
-
-        .stat-box {
-            text-align: center;
-            width: 200px;
-        }
-
-        .stat-box h3 {
-            font-size: 2.5rem;
-            font-weight: bold;
-        }
-
-        .stat-box p {
-            font-size: 1.1rem;
-        }
-
-        /* Footer */
-        footer {
-            background-color: #1d2d50;
-            padding: 30px;
-            text-align: center;
-            color: #fff;
-        }
-
-        footer p {
-            font-size: 1.2rem;
-            font-weight: 300;
-        }
     </style>
 </head>
-
 <body>
 
-    <!-- Header Section -->
-    <header>
-        <h1>Rohit Sharma</h1>
-        <p>The King of Cricket</p>
-    </header>
+    <h1>Live Sports Events</h1>
+    <div class="event-container" id="events"></div>
+    <script>
+        async function fetchEvents() {
+            try {
+                const response = await fetch("https://raw.githubusercontent.com/drmlive/fancode-live-events/refs/heads/main/fancode.json");
+                const data = await response.json();
 
-    <!-- Navigation Section -->
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Biography</a>
-        <a href="#">Career Stats</a>
-        <a href="#">Videos</a>
-        <a href="#">Gallery</a>
-        <a href="#">Contact</a>
-    </nav>
+                const container = document.getElementById("events");
+                container.innerHTML = "";
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <div>
-            <h2>Welcome to the Official Website</h2>
-            <p>Follow the Journey of India's Captain</p>
-        </div>
-    </section>
+                data.matches.forEach(event => {
+                    const eventDiv = document.createElement("div");
+                    eventDiv.classList.add("event-card");
 
-    <!-- Content Section -->
-    <section class="content">
-        <h2>About Rohit Sharma</h2>
-        <p>Rohit Sharma is one of the most successful and popular cricketers in the world. As India's captain, he has led the team to many victories, including multiple ICC tournaments. Known for his elegant stroke play, Rohit has set records in both ODI and T20 formats. Get to know more about his incredible career and achievements on this platform.</p>
-    </section>
+                    let eventDate = new Date(event.startTime);
+                    let formattedDate = eventDate.toLocaleDateString();
+                    let formattedTime = eventDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+                    let isLive = event.status === "LIVE";
+                    let videoLink = event.dai_url ? https://teamrohitofficalnew.netlify.app?videoUrl=${encodeURIComponent(event.dai_url)} : "#";
 
-    <!-- Stats Section -->
-    <section class="stats">
-        <div class="stat-box">
-            <h3>100+</h3>
-            <p>International Centuries</p>
-        </div>
-        <div class="stat-box">
-            <h3>250+</h3>
-            <p>ODI Matches</p>
-        </div>
-        <div class="stat-box">
-            <h3>5</h3>
-            <p>ICC Titles</p>
-        </div>
-    </section>
+                    eventDiv.innerHTML = 
+                        <img src="${event.src}" alt="${event.title}">
+                        ${isLive ? <div class="live-badge">LIVE</div> : ""}
+                        <div class="event-card-content">
+                            <div class="event-title">${event.title}</div>
+                            <div class="event-league">${event.event_name}</div>
+                            <div class="btn-group">
+                                ${event.dai_url ? <a href="${videoLink}" target="_blank" class="watch-btn">Watch Now</a> : ''}
+                                ${event.dai_url ? <a href="${videoLink}" target="_blank" class="ad-free-btn">Ad-Free</a> : ''}
+                            </div>
+                        </div>
+                    ;
 
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2025 Rohit Sharma Official | All Rights Reserved</p>
-    </footer>
+                    container.appendChild(eventDiv);
+                });
+
+            } catch (error) {
+                console.error("Error fetching events:", error);
+            }
+        }
+
+        fetchEvents();
+    </script>
 
 </body>
-
 </html>
